# ChangeLog for net-p2p/xmule
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/xmule/Attic/ChangeLog,v 1.18 2003/12/06 16:19:17 mholzer Exp $

  06 Dec 2003; Martin Holzer <mholzer@gentoo.org> xmule-1.6.0a-r1.ebuild,
  xmule-1.6.0a.ebuild, xmule-1.6.1.ebuild:
  adding RESTRICT="nomirror"

  19 Oct 2003; Rainer Groesslinger <scandium@gentoo.org>
  xmule-1.6.0a-r1.ebuild, xmule-1.6.0a.ebuild, xmule-1.6.1.ebuild:
  Add a check if wxGTK is compiled with unicode

*xmule-1.6.1 (11 Oct 2003)

  11 Oct 2003; Rainer Groesslinger <scandium@gentoo.org> xmule-1.6.1.ebuild:
  new version

*xmule-1.6.0a-r1 (20 Sep 2003)

  20 Sep 2003; Rainer Groesslinger <scandium@gentoo.org>
  xmule-1.6.0a-r1.ebuild, files/rehash.patch:
  fix a rehashing problem, see bug #28733

*xmule-1.6.0a (28 Aug 2003)

  28 Aug 2003; Rainer Groesslinger <scandium@gentoo.org> xmule-1.6.0a.ebuild:
  new tarball, only fixes a cosmetic problem in the preferences menu

*xmule-1.6.0 (27 Aug 2003)

  27 Aug 2003; Rainer Groesslinger <scandium@gentoo.org> xmule-1.6.0.ebuild:
  new version, fixes all known security issues.
  Removing all older versions which had security exploits

*xmule-1.4.3 (13 Aug 2003)

  13 Aug 2003; Rainer Groesslinger <scandium@gentoo.org> xmule-1.4.3.ebuild:
  new version

*xmule-1.4.2 (22 Jul 2003)

  22 Jul 2003; Rainer Groesslinger <scandium@gentoo.org> xmule-1.4.2.ebuild:
  new version

*xmule-1.4.1a (11 Jul 2003)

  11 Jul 2003; Rainer Groesslinger <scandium@gentoo.org> xmule-1.4.1a.ebuild:
  new stable version, do not add xmule unstable releases to the tree anymore

*xmule-1.5.4 (06 Jul 2003)

  06 Jul 2003; Rainer Groesslinger <scandium@gentoo.org> xmule-1.5.1.ebuild,
  xmule-1.5.2.ebuild, xmule-1.5.4.ebuild:
  new version, minor cleanups

*xmule-1.5.2 (23 Jun 2003)

  23 Jun 2003; Hanno Boeck <hanno@gentoo.org> xmule-1.5.2.ebuild:
  Version bump.

*xmule-1.5.1 (18 Jun 2003)
