@@ -1,8 +1,8 @@
-MD5 da97d478ec56adb699386b5df7dcab22 ChangeLog 2371
+MD5 30b95be8d9435a368c5a0e2125cc8d3c ChangeLog 2461
 MD5 8aefbc0e49db723ca1ad02d0c409cd49 metadata.xml 160
 MD5 85f3fcdf0ff0aa63a2676c6b946cb58d xmule-1.6.0a.ebuild 979
 MD5 7127143724879968d57c3a57730b415a xmule-1.6.0a-r1.ebuild 1123
-MD5 cd3fe8280e054ab19f9599f0db04f200 xmule-1.6.1.ebuild 1023
+MD5 c95d98ab2ae74cd53048300bea7a6abe xmule-1.6.1.ebuild 1130
 MD5 ae3ef316b6a6a3cc8b670289ed08ee79 files/digest-xmule-1.6.0a 65
 MD5 ae3ef316b6a6a3cc8b670289ed08ee79 files/digest-xmule-1.6.0a-r1 65
 MD5 d4e66918eaa0f6b42f988409ae3c218f files/rehash.patch 348
