@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/xmule/Attic/xmule-1.6.1.ebuild,v 1.5 2003/12/06 16:19:17 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/xmule/Attic/xmule-1.6.1.ebuild,v 1.6 2003/12/06 17:48:40 mholzer Exp $
 
 MY_P=${P//a}
 S=${WORKDIR}/${MY_P}
@@ -14,9 +14,10 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
 
-IUSE=""
+IUSE="nls"
 
 DEPEND=">=x11-libs/wxGTK-2.4.1
+	nls? ( sys-devel/gettext )
 	>=sys-libs/zlib-1.1.4"
 
 pkg_setup() {
@@ -36,7 +37,12 @@ src_compile () {
 	autoheader
 	automake
 
-	econf || die
+	local myconf=
+
+	use nls \
+		|| myconf="${myconf} --disable-nls"
+
+	econf ${myconf} || die
 	MAKEOPTS="${MAKEOPTS} -j1" emake || die
 }
 
